--- a/test.html
+++ b/test.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script defer src="app.js"></script>
-
+    <script defer src="js/app.js"></script>
 </head>
 <body>
-
-    <div id="button">Click me!</div>
-    <div class="hide">Hide me!</div>
-
+<div class="center">
+    <div class="button">Click me!</div>
+    <div class="hide"><span>Hide me!</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consequatur culpa delectus dolor dolore doloribus dolorum eaque eius eos ex explicabo facere facilis, fuga in iure maxime modi molestiae nostrum obcaecati omnis pariatur porro praesentium provident quas quasi qui rerum totam unde voluptas voluptatem! Distinctio excepturi qui ratione similique tempora!</div>
+</div>
 </body>
 </html>
